syntax = "proto3";
//
// Copyright (C) 2019 Topica Edtech Group.
//

package vn.edu.topicanative.saas.api.model.payment;

message PaymentRecharge{
  string ContactId = 1;
  string UserName = 2;
  string UserPhone = 3;
  string UserEmail = 4;
  float Value = 5;
  string Reason = 6;
  string TransactionInfo = 7;
  int64 BillCode = 8;
  string Time = 9;
  bool DisableWarning = 10;
  bool AutoTransfer = 11;
  string Country = 12;
  string EstimateOwner = 13;
  string TransactionBy = 14;
  int32 FromBanking = 15;
  string TransactionOwner  = 16;
}

message PaymentTransactionInfo{
  string advisor_id = 1;
  string ContactId = 2;
  string Value = 3;
  string TransactionBy = 4;
}

message PaymentRechargeResponse{
  bool status = 1;
  int32 transaction_id = 2;
  string transaction_reason = 3;
  int32 transaction_type = 4;
  int32 balance_transaction = 5;
  int32 balance_affter = 6;
  string status_code = 7;
  string msg = 8;
  int32 tcoin_transfer = 9;
  int32 tcoin_affter_transfer = 10;
  int32 balance_affter_transfer = 11;
  bool core_notify_user = 12;
}