syntax = "proto3";
//
// Copyright (C) 2019 Topica Edtech Group.
//

package vn.edu.topicanative.saas.api.model.request;

import "MetaDataModel.proto";

message DefaultParam {
}

message ServiceRequest {
  string requestId = 1;
  string tenantId = 2;
  string clientId = 3;
  string accessToken = 4;
  string userId = 5;
  string username = 6;
  repeated string roles = 7;
  vn.edu.topicanative.saas.api.model.metadata.LogLevelType logLevelType = 8;
  string userAgent = 9;
  int64 utcStartTime = 10;
}
