syntax = "proto3";
//
// Copyright (C) 2019 Topica Edtech Group.
//

package vn.edu.topicanative.saas.api.model.studentcare;

import "ActivityModel.proto";

message StudentCareHistory {
  string contactId = 1;
  vn.edu.topicanative.saas.api.model.activity.FeeReceiveActivities payments = 2;
  vn.edu.topicanative.saas.api.model.activity.CallActivities calls = 3;
}
